--- a/index.html
+++ b/index.html
@@ -144,21 +144,21 @@ li{
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="canvas3.jpg" class="d-block w-100" alt="..." style="height: 500px;">
+            <img src="canvas/Untitled1.jpg" class="d-block w-100" alt="..." style="height: 500px;">
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
               <p>Some representative placeholder content for the first slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="canvas2.jpg" class="d-block w-100" alt="..." style="height: 500px;">
+            <img src="canvas/canvas3.jpg" class="d-block w-100" alt="..." style="height: 500px;">
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
               <p>Some representative placeholder content for the second slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="canvas1.jpg" class="d-block w-100" alt="..." style="height: 500px;">
+            <img src="canvas/canvas3.jpg" class="d-block w-100" alt="..." style="height: 500px;">
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>Some representative placeholder content for the third slide.</p>
@@ -175,12 +175,141 @@ li{
         </button>
       </div>
     </section>
-        <!-- carousel part -->
-    
+        <!-- carousel end -->
+    <!-- image collaspe-->
+    <section>
+      <div class="text-center container mt-4">
+        <h1 class="font-monospace">FIND YOUR BEAUTY MATCH<br></h1>
+         <p class="text-secondary font-monospace">At vero eos et accusamus et iusto</p> <br>
+         <div class="row row-cols-1 row-cols-md-4 g-4">
+          <div class="col">
+            <div class="card border">
+              <img src="potrait/portrait-1.jpg" class="card-img-top" alt="..." style="height:360px" id="pic">
+
+              <div class="card-body">
+                <h5 class="card-title" style="font-family: DejaVu Sans Mono, monospace;">Film Painting</h5>
+                <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">Oil Painting</p>
+                <p style="font-family: Snell Roundhand, cursive" class="text-secondary m-0">
+                  <span style="padding-right: 15px;">$</span>35.00</p>
+              <div style="color: gainsboro;">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+              </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border">
+              <img src="potrait/potrait-4.jpg" class="card-img-top" alt="..." style="height:360px" id="pic1">
+
+              <div class="card-body">
+                <h5 class="card-title" style="font-family: DejaVu Sans Mono, monospace;">Film Painting</h5>
+                <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">Oil Painting</p>
+                <p style="font-family: Snell Roundhand, cursive" class="text-secondary m-0">
+                  <span style="padding-right: 15px;">$</span>25.00</p>
+              <div style="color: gainsboro;">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+              </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border">
+              <img src="potrait/portrait-2 (1).jpg" class="card-img-top" alt="..." style="height:360px" id="pic3">
+
+              <div class="card-body">
+                <h5 class="card-title" style="font-family: DejaVu Sans Mono, monospace;">Film Painting</h5>
+                <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">Oil Painting</p>
+                <p style="font-family: Snell Roundhand, cursive" class="text-secondary m-0">
+                  <span style="padding-right: 15px;">$</span>45.00</p>
+              <div style="color: gainsboro;">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+              </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border">
+              <img src="potrait/portrait-3.jpg" class="card-img-top" alt="..." style="height:360px" id="img1">
+
+              <div class="card-body">
+                <h5 class="card-title" style="font-family: DejaVu Sans Mono, monospace;">Film Painting</h5>
+                <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">Oil Painting</p>
+                <p style="font-family: Snell Roundhand, cursive" class="text-secondary m-0">
+                  <span style="text-decoration: line-through;padding-right: 15px;">$20.00  </span>  $25.00</p>
+              <div style="color: gainsboro;">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+              </div>
+              </div>
+            </div>
+          </div>
+      </div>
+      </div>
+    </section>
+    <section>
+      <!-- IMAGE CARD -->
+      <div class="row row-cols-2 row-cols-md-4 g-4 mt-3">
+        <div class="col">
+          <div class="card">
+            <img src="item/Item-2.webp" class="card-img-top" alt="...">
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="item/Item-3 (1).jpg" class="card-img-top" alt="...">
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="item/Item-5.jpg" class="card-img-top" alt="..." style="height: 350px;">
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="item/Item-6.jpg" class="card-img-top" alt="...">
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="item/Item-8.jpeg" class="card-img-top" alt="..." style="height: 350px;">
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="item/item7.jpg" class="card-img-top" alt="..." style="height: 350px;">
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="item/combo brush.jpg" class="card-img-top" alt="..." style="height: 350px;">
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="item/combo brush3.jpg" class="card-img-top" alt="..." style="height: 350px;">
+          </div>
+        </div>
+      </div>
+    </section>
     <footer> 
 <!-- Footer part -->
 <div class="">
-<div class="d-flex">
+<div class="d-flex mt-5">
   <div class="text-center grid footer">
     <h2>CONTACT</h2>
     <p class="text-light card-text fst-italic">Address: Seestrasse 21, Zurich <br>
