--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ li{
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="canvas/canvas4.jpg" class="d-block w-100 img-fluid" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-none d-md-block text-dark mt-5">
               <h5>Our Group Project</h5>
               <p>Some representative placeholder content for the first slide.</p>
             </div>
@@ -341,7 +341,7 @@ li{
                 ABCDEH Canvas – Forever Painting<br>
                 Pure Painter Solutions
                 <br>
-                -by Saima<br>
+                -by Nighar<br>
               </p>
               </div>
           </div>
@@ -352,7 +352,7 @@ li{
                 ABCDEH Canvas – Forever Painting<br>
                 Pure Painter Solutions
                 <br>
-                -by Saima<br>
+                -by Proggha<br>
               </p>
               </div>
           </div>
@@ -445,6 +445,9 @@ li{
               provident, similique sunt in culpa qui officia deserunt mollitia<br>
                animi <br>
                 </p>
+                <div>
+                  <button type="button" class="btn-1 fst-italic">Find Paint</button>
+                </div>
                 
                 </div>
               </div>
@@ -467,6 +470,9 @@ li{
               provident, similique sunt in culpa qui officia deserunt mollitia<br>
                animi <br>
                 </p>
+                <div>
+                  <button type="button" class="btn-1 fst-italic">Find Paint</button>
+                </div>
                 </div>
               </div>
               <div class="col">
@@ -815,7 +821,7 @@ li{
       <!-- form -->
       <section class=" min-5 abc d-flex justify-content-evenly align-items-center bg-danger-subtle">
         <div class="col-sm-6 col-md-4 col-lg-3 container mt-5">
-          <img src="Google__logo.png" alt="" class="img-fluid">
+          <img src="" alt="" class="img-fluid">
       <form style="height: 400px; width: 350px;">
         <div class="mb-3">
             <h3>Contact Us</h3>
@@ -846,8 +852,8 @@ li{
 <div class="d-flex">
   <div class="text-center grid footer">
     <h2>CONTACT</h2>
-    <p class="text-light card-text fst-italic">Address: Seestrasse 21, Zurich <br>
-      E-mail: biagiotti@qodeinteractive.com<br>
+    <p class="text-light card-text fst-italic">Address: Cox's Bazar, Bangladesh <br>
+      E-mail: saimamustain52@gmail.com<br>
       Phone : + 99 411 725 39 12<br>
       <br></p>
       <img src="atm card/visa card.jpg" style="width: 20px;">
