--- a/index.html
+++ b/index.html
@@ -9,36 +9,16 @@
     <link rel="stylesheet" href="myProjects/webProject/icofont/css/icofont.min.css">
     <link rel="stylesheet" href="./style.css">
     <style>
-  
-.footer{
-    padding-top: 130px;
-    padding-bottom: 150px;
-    background-color:#242424 ;
-    width: 1300px;
-}
-.footer h2{
-    font-weight: 800;
-    color: white;
-}
-.footer i{
-    color: #F4F4F4;
-    background: #242424;
-    border-radius: 100%;
-
-}
-li{
-  list-style-type: none;
-}
     </style>
   </head>
   <body>
     <section class="">
       <div class="card">
         <div class="card-body bg-dark d-flex justify-content-between">
-          <h5  class="text-white" style="font-family: Brush Script MT, Brush Script Std, cursive;">saimamustain52@gmail.com</h5>
-          <h5  class="text-white" style="font-family: Brush Script MT, Brush Script Std, cursive;">Free shipping on international orders of $150+</h5>
-          <h5  class="text-white" style="font-family: Brush Script MT, Brush Script Std, cursive;">Log in<button><i class="fa-regular fa-user"></i>
-          </button></h5>
+          <h5  class="text-white fst-italic">saimamustain52@gmail.com</h5>
+          <h5  class="text-white fst-italic">Free shipping on international orders of $150+</h5></button>
+          <h5  class="text-white fs">Log in<button><i class="fa-regular fa-user"></i>
+          </h5>
         </div>
       </div>
       <!-- navbar -->
