--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="card-body bg-dark d-flex justify-content-between">
           <h5  class="text-white fst-italic">saimamustain52@gmail.com</h5>
           <h5  class="text-white fst-italic">Free shipping on international orders of $150+</h5></button>
-          <h5  class="text-white fs">Log in<button><i class="fa-regular fa-user"></i>
+          <h5  class="text-white fst-italic">Log in<button><i class="fa-regular fa-user"></i>
           </h5>
         </div>
       </div>
@@ -160,7 +160,7 @@
 
               <div class="card-body">
                 <h5 class="card-title" style="font-family: DejaVu Sans Mono, monospace;">Film Painting</h5>
-                <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">Oil Painting</p>
+                <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">Acryalic Painting</p>
                 <p style="font-family: Snell Roundhand, cursive" class="text-secondary m-0">
                   <span style="padding-right: 15px;">$</span>35.00</p>
               <div style="color: gainsboro;">
@@ -198,7 +198,7 @@
 
               <div class="card-body">
                 <h5 class="card-title" style="font-family: DejaVu Sans Mono, monospace;">Film Painting</h5>
-                <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">Oil Painting</p>
+                <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">WaterColor Paint</p>
                 <p style="font-family: Snell Roundhand, cursive" class="text-secondary m-0">
                   <span style="padding-right: 15px;">$</span>45.00</p>
               <div style="color: gainsboro;">
@@ -217,7 +217,7 @@
 
               <div class="card-body">
                 <h5 class="card-title" style="font-family: DejaVu Sans Mono, monospace;">Film Painting</h5>
-                <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">Oil Painting</p>
+                <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">Pastel Paint</p>
                 <p style="font-family: Snell Roundhand, cursive" class="text-secondary m-0">
                   <span style="text-decoration: line-through;padding-right: 15px;">$20.00  </span>  $25.00</p>
               <div style="color: gainsboro;">
@@ -404,12 +404,12 @@
       <!-- get -->
       <section class="">
         <div class="text-center">
-          <div class="row row-cols-2 g-0">
+          <div class="row row-cols-2 g-0 mt-3">
             <div class="col">
              <img src="get/get1.jpg" class="img-fluid" alt="">
             </div>
             <div class="col bg-light">
-              <div class="text-center" style="padding-top: 150px; padding-bottom: 180px;">
+              <div class="text-center" style="padding-top: 150px;">
                 <h2 class="fst-italic" style="font-family: Brush Script MT, Brush Script Std, cursive;">timeline</h2>
                 <h2 class="fst-italic">  HOW DID WE GET HERE <br></h2>
                 <p class="text-dark card-text fst-italic">
@@ -428,13 +428,15 @@
                 <div>
                   <button type="button" class="btn-1 fst-italic">Find Paint</button>
                 </div>
-                
+                <div class="d-flex align-items-end flex-column mb-0">
+                  <img src="position/pic2.jpg" class="img-fluid" alt="" style="height: 200px; width: 400px;">
+                </div>
                 </div>
               </div>
           </div>
-          <div class="row row-cols-2">
+          <div class="row row-cols-2 g-0">
             <div class="col bg-light">
-              <div class="text-center" style="padding-top: 200px; padding-bottom: 200px;">
+              <div class="text-center" style="padding-top: 200px;">
                 <h2 class="fst-italic" style="font-family: Brush Script MT, Brush Script Std, cursive;">timeline</h2>
                 <h2 class="fst-italic"> WHAT IT TAKES TO LEAD<br></h2>
                 <p class="text-dark card-text fst-italic">
@@ -452,6 +454,9 @@
                 </p>
                 <div>
                   <button type="button" class="btn-1 fst-italic">Find Paint</button>
+                  <div class="d-flex align-items-end flex-column mb-0">
+                    <img src="position/pic5.jpg" class="img-fluid" alt="" style="height: 200px; width: 400px;">
+                  </div>
                 </div>
                 </div>
               </div>
@@ -476,8 +481,8 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title font-monospace">Brush</h5>
-                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare ius,<br>
-                    porro<br></p>
+                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare<br>
+                    ius, porro<br></p>
                   <p style="font-family: Snell Roundhand, cursive">
                     <span>$</span>25.00</p>
                 </div>
@@ -494,8 +499,8 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title" style="font-family: DejaVu Sans Mono, monospace;">Different Color</h5>
-                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare ius,<br>
-                    porro<br></p>
+                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare<br>
+                    ius, porro<br></p>
                   <p style="font-family: Snell Roundhand, cursive">
                     <span>$</span>35.00</p>
                 </div>
@@ -512,8 +517,8 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title" style="font-family: DejaVu Sans Mono, monospace;">Water Color</h5>
-                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare ius,<br>
-                    porro<br></p>
+                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare<br>
+                    ius, porro<br></p>
                   <p style="font-family: Snell Roundhand, cursive">
                     <span>$</span>25.00</p>
                 </div>
@@ -530,8 +535,8 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title" style="font-family: DejaVu Sans Mono, monospace;">Pastel Color</h5>
-                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare ius,<br>
-                    porro<br></p>
+                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare<br>
+                    ius, porro<br></p>
                   <p style="font-family: Snell Roundhand, cursive">
                     <span>$</span>25.00</p>
                 </div>
@@ -548,8 +553,8 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title" style="font-family: DejaVu Sans Mono, monospace;">Spray Color</h5>
-                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare ius,<br>
-                    porro<br></p>
+                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare<br>
+                    ius, porro<br></p>
                   <p style="font-family: Snell Roundhand, cursive">
                     <span>$</span>35.00</p>
                 </div>
@@ -566,8 +571,8 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title" style="font-family: DejaVu Sans Mono, monospace;">Spray Color</h5>
-                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare ius,<br>
-                    porro<br></p>
+                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare<br>
+                    ius porro<br></p>
                   <p style="font-family: Snell Roundhand, cursive">
                     <span>$</span>25.00</p>
                 </div>
@@ -584,8 +589,8 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title" style="font-family: DejaVu Sans Mono, monospace;">Spray Color</h5>
-                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare ius,<br>
-                    porro<br></p>
+                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare<br>
+                    ius,  porro<br></p>
                   <p style="font-family: Snell Roundhand, cursive">
                     <span>$</span>25.00</p>
                 </div>
@@ -602,8 +607,8 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title" style="font-family: DejaVu Sans Mono, monospace;">Remove Color</h5>
-                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare ius,<br>
-                    porro<br></p>
+                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare<br>
+                    ius, porro<br></p>
                   <p style="font-family: Snell Roundhand, cursive">
                     <span>$</span>45.00</p>
                 </div>
@@ -620,8 +625,8 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title" style="font-family: DejaVu Sans Mono, monospace;">Berger Silk</h5>
-                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare ius,<br>
-                    porro<br></p>
+                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare<br>
+                    ius, porro<br></p>
                   <p style="font-family: Snell Roundhand, cursive">
                     <span>$</span>35.00</p>
                 </div>
@@ -638,8 +643,8 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title" style="font-family: DejaVu Sans Mono, monospace;">Long Life</h5>
-                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare ius,<br>
-                    porro<br></p>
+                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare<br>
+                    ius, porro<br></p>
                   <p style="font-family: Snell Roundhand, cursive">
                     <span>$</span>15.00</p>
                 </div>
@@ -656,8 +661,8 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title" style="font-family: DejaVu Sans Mono, monospace;">Color Shade</h5>
-                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare ius,<br>
-                    porro<br></p>
+                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare<br>
+                    ius,  porro<br></p>
                   <p style="font-family: Snell Roundhand, cursive">
                     <span>$</span>25.00</p>
                 </div>
@@ -674,8 +679,8 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title" style="font-family: DejaVu Sans Mono, monospace;">Anti Dust</h5>
-                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare ius,<br>
-                    porro<br></p>
+                  <p class="card-text text-secondary m-0" style="font-family: Comic Sans MS, Comic Sans, cursive;">An dico accommodare<br>
+                    ius, porro<br></p>
                   <p style="font-family: Snell Roundhand, cursive">
                     <span>$</span>45.00</p>
                 </div>
