--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="canvas/canvas4.jpg" class="d-block w-100 img-fluid" alt="...">
-            <div class="carousel-caption d-none d-md-block text-dark mt-5">
+            <img src="canvas/Untitled1.jpg" class="d-block w-100 img-fluid" alt="...">
+            <div class="carousel-caption d-none d-md-block mt-5">
               <h5>Our Group Project</h5>
               <p>Some representative placeholder content for the first slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="canvas/Untitled1.jpg" class="d-block w-100 img-fluid" alt="...">
+            <img src="canvas/canvas4.jpg" class="d-block w-100 img-fluid" alt="...">
             <div class="carousel-caption d-none d-md-block text-dark">
               <h5>Our Group Project</h5>
               <p>Some representative placeholder content for the second slide.</p>
