--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
     <!-- logo -->
     <section>
       <div class="container mt-5 bg-white gap-5">
+        <marquee behavior="" direction="">
         <div class="d-flex justify-content-between flex-wrap align-items-center">
            <img src="logo/canvas.jpg" class="img-fluid" style="height: 60px; padding-right: 2%;">
            <img src="logo/IMG-20240131-WA0007.jpg" class="img-fluid" style="height: 70px; padding-right: 2%;">
@@ -292,6 +293,7 @@
            <img src="logo/IMG-20240131-WA0012.jpg" class="img-fluid" style="height: 70px; padding-right: 2%;">
            <img src="logo/IMG-20240131-WA0013.jpg" class="img-fluid" style="height: 70px; padding-right: 2%;">
         </div>
+      </marquee>
       </div>
     </section>
     <!-- testimonal part -->
