--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
     <script src="https://kit.fontawesome.com/861b80ed40.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="myProjects/webProject/icofont/css/icofont.min.css">
     <link rel="stylesheet" href="./style.css">
-    <style>
-    </style>
   </head>
   <body>
     <section class="">
       <div class="card">
-        <div class="card-body bg-dark d-flex justify-content-between">
-          <h5  class="text-white fst-italic">saimamustain52@gmail.com</h5>
-          <h5  class="text-white fst-italic">Free shipping on international orders of $150+</h5></button>
-          <h5  class="text-white fst-italic">Log in<button><i class="fa-regular fa-user"></i>
-          </h5>
+        <div class="card-body bg-dark d-lg-flex justify-content-lg-between">
+      <p  class="text-white fst-italic">saimamustain52@gmail.com</p>
+      <p  class="text-white fst-italic">Free shipping on international orders of $150+</p> 
+      <div class="d-flex justify-content-between">
+        <p  class="text-white fst-italic">Log in<i class="fa-regular fa-user"></i>
+        </p>
+      </div> 
+          
         </div>
       </div>
       <!-- navbar -->
@@ -428,7 +429,7 @@
                animi <br>
                 </p>
                 <div>
-                  <button type="button" class="btn-1 fst-italic">Find Paint</button>
+                  <button type="button" class="btn-1 fst-italic btn">Find Paint</button>
                 </div>
                 <div class="d-flex align-items-end flex-column mb-0">
                   <img src="position/pic2.jpg" class="img-fluid" alt="" style="height: 200px; width: 400px;">
@@ -455,7 +456,7 @@
                animi <br>
                 </p>
                 <div>
-                  <button type="button" class="btn-1 fst-italic">Find Paint</button>
+                  <button type="button" class="btn-1 fst-italic btn">Find Paint</button>
                   <div class="d-flex align-items-end flex-column mb-0">
                     <img src="position/pic5.jpg" class="img-fluid" alt="" style="height: 200px; width: 400px;">
                   </div>
@@ -693,8 +694,8 @@
       </div>
     </section>
     <!-- background logo-->
-    <section class="bg-warning-subtle align-items-center d-flex bg-opacity-25" style="height: 600px;">
-    <div class="text-center mt-5 w-100 mb-4 container">
+    <section class="bg-warning-subtle align-items-center d-flex bg-opacity-25">
+    <div class="text-center mt-5 w-100 mb-5 container">
        <div class="row row-cols-1 row-cols-md-5">
         <div class="col">
             <img src="pain-brush.jpg" class="card-img-top img-fluid" alt="..." id="pic" style="height: 200px;">
@@ -742,8 +743,8 @@
     </div>
       </section>
       <!-- find your art -->
-      <section style="padding-top: 120PX; padding-bottom: 120PX;">
-        <div class="text-center container">
+      <section>
+        <div class="text-center container mt-5">
           <h1 class="font-monospace">FIND YOUR BEAUTY MATCH<br></h1>
            <p class="text-secondary font-monospace">At vero eos et accusamus et iusto</p> <br>
            <div class="row row-cols-1 row-cols-md-4 g-4 mt-2">
@@ -806,7 +807,7 @@
         </div>
       </section>
       <!-- form -->
-      <section class=" min-5 abc d-flex justify-content-evenly align-items-center bg-danger-subtle">
+      <section class=" min-5 abc d-flex justify-content-evenly align-items-center bg-danger-subtle mt-5">
         <div class="col-sm-6 col-md-4 col-lg-3 container mt-5">
           <img src="" alt="" class="img-fluid">
       <form style="height: 400px; width: 350px;">
@@ -834,9 +835,8 @@
       </div>
       </section>
 <!-- Footer part -->
-<footer style="padding-bottom: 120px;">
-<div class="">
-<div class="d-flex">
+<footer>
+<div class="d-flex flex-column flex-lg-row">
   <div class="text-center grid footer">
     <h2>CONTACT</h2>
     <p class="text-light card-text fst-italic">Address: Cox's Bazar, Bangladesh <br>
@@ -882,7 +882,6 @@
 
 
 
-</div>
 </div>
 
 
